implemented swagger auto docs generation for the endpoints
