# src/server/api/routes/batches.router.js
@@ -1,4 +1,3 @@
-/* eslint-disable no-console */
 const express = require('express');
 
 const router = express.Router({ mergeParams: true });
@@ -7,6 +6,27 @@ const router = express.Router({ mergeParams: true });
 const batchesController = require('../controllers/batches.controller');
 const batchController = require('../controllers/batches.controller');
 
+/**
+ * @swagger
+ * /batches/:
+ *   get:
+ *     summary: Get all batches
+ *     description:
+ *       Get default parameter values for all batches
+ *     tags:
+ *       - Batches
+ *     operationId: getBatches
+ *     produces: application/json
+ *     responses:
+ *       200:
+ *         description: Successful request
+ *       401:
+ *         description: You are not authorized to view this content.
+ *       404:
+ *         description: A batch with the specified id was not found.
+ *       5XX:
+ *         description: Unexpected error.
+ */
 // ENDPOINT: /api/batches/ :GET to get all batches
 router.get('/', (req, res, next) => {
   batchesController
@@ -15,6 +35,27 @@ router.get('/', (req, res, next) => {
     .catch(next);
 });
 
+/**
+ * @swagger
+ * /batch/{batchId}:
+ *   get:
+ *     summary: Get default parameter values for a specific batch
+ *     description:
+ *       Get default parameter values for a specific batch by batchId
+ *     tags:
+ *       - Batch by id
+ *     operationId: getBatchById
+ *     produces: application/json
+ *     responses:
+ *       200:
+ *         description: Successful request
+ *       401:
+ *         description: You are not authorized to view this content.
+ *       404:
+ *         description: A batch with the specified id was not found.
+ *       5XX:
+ *         description: Unexpected error.
+ */
 // ENDPOINT: /api/batch/:id :GET to get one module
 router.get('/:batchId', (req, res, next) => {
   batchController
