# src/server/api/routes/users.router.js
@@ -10,6 +10,38 @@ const {
   checkIfAuthenticated,
 } = require('../lib/middleware/authentication.middleware');
 
+/**
+ * @swagger
+ * /users/role:
+ *   get:
+ *     summary: Get a role for specific user by uid
+ *     description: Get a role for specific user by uid
+ *     tags:
+ *       - User role
+ *     operationId: getRole
+ *     produces:
+ *       - application/json
+ *       - name: admin
+ *     parameters:
+ *       - name: authorization
+ *         in: header
+ *         description: Firebase token
+ *         required: true
+ *         type: string
+ *         default: Bearer ENTER_FIREBASE_TOKEN
+ *     responses:
+ *       200:
+ *         description: Role returned.
+ *       401:
+ *         description: You are not authorized to view this content.
+ *       404:
+ *         description: A user with the specified uid was not found.
+ *       5XX:
+ *         description: Unexpected error.
+ *     security:
+ *        -firebase_auth:
+ *        - read
+ */
 // ENDPOINT: /api/users/role :GET to get user's role for specific uid/user
 router.get('/role', checkIfAuthenticated, (req, res, next) => {
   usersController
@@ -18,6 +50,37 @@ router.get('/role', checkIfAuthenticated, (req, res, next) => {
     .catch(next);
 });
 
+/**
+ * @swagger
+ * /users/name:
+ *   get:
+ *     summary: Get a name for specific user by uid
+ *     description: Get a name for specific user by uid
+ *     tags:
+ *       - User name
+ *     operationId: getName
+ *     produces:
+ *       application/json
+ *     parameters:
+ *       - name: authorization
+ *         in: header
+ *         description: Firebase token
+ *         required: true
+ *         type: string
+ *         default: Bearer ENTER_FIREBASE_TOKEN
+ *     responses:
+ *       200:
+ *         description: User returned.
+ *       401:
+ *         description: You are not authorized to view this content.
+ *       404:
+ *         description: Name not found.
+ *       5XX:
+ *         description: Unexpected error.
+ *     security:
+ *        firebase_auth:
+ *        - read
+ */
 // ENDPOINT: /api/users/name/:uid :GET to get name of the user by UID
 router.get('/name', checkIfAuthenticated, (req, res, next) => {
   usersController
